[gd_scene load_steps=71 format=3 uid="uid://cy1vyx88wgg4v"]

[ext_resource type="Script" uid="uid://bangw8dvmuyod" path="res://Player/player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://bvtijhwqlx01u" path="res://Assets/Player/Ivy.png" id="2_gwnis"]
[ext_resource type="Texture2D" uid="uid://rnawpuddimk" path="res://Assets/Player/Slash.png" id="3_btcbx"]
[ext_resource type="Script" uid="uid://m70ma2rafm6p" path="res://Player/movement_particles.gd" id="4_k53q1"]
[ext_resource type="Texture2D" uid="uid://ul3588q4vy3l" path="res://Assets/Forest/LeafParticle2.png" id="5_fhl08"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k53q1"]
atlas = ExtResource("2_gwnis")
region = Rect2(448, 896, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhl08"]
atlas = ExtResource("2_gwnis")
region = Rect2(672, 896, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtle1"]
atlas = ExtResource("2_gwnis")
region = Rect2(896, 896, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_od3ui"]
atlas = ExtResource("2_gwnis")
region = Rect2(1120, 896, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_00tjw"]
atlas = ExtResource("2_gwnis")
region = Rect2(1344, 896, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3vf3"]
atlas = ExtResource("2_gwnis")
region = Rect2(0, 1120, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_apopc"]
atlas = ExtResource("2_gwnis")
region = Rect2(224, 1120, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_5htga"]
atlas = ExtResource("2_gwnis")
region = Rect2(448, 1120, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5o4e"]
atlas = ExtResource("2_gwnis")
region = Rect2(672, 1120, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu6f8"]
atlas = ExtResource("2_gwnis")
region = Rect2(1344, 448, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_n471f"]
atlas = ExtResource("2_gwnis")
region = Rect2(0, 672, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_7emwf"]
atlas = ExtResource("2_gwnis")
region = Rect2(224, 672, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_hshwv"]
atlas = ExtResource("2_gwnis")
region = Rect2(448, 672, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpjlu"]
atlas = ExtResource("2_gwnis")
region = Rect2(672, 672, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mwp6"]
atlas = ExtResource("2_gwnis")
region = Rect2(896, 672, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_76lrf"]
atlas = ExtResource("2_gwnis")
region = Rect2(1120, 672, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_btcbx"]
atlas = ExtResource("2_gwnis")
region = Rect2(896, 1120, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwnis"]
atlas = ExtResource("2_gwnis")
region = Rect2(1120, 1120, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_efx54"]
atlas = ExtResource("2_gwnis")
region = Rect2(0, 1344, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_755ss"]
atlas = ExtResource("2_gwnis")
region = Rect2(224, 1344, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbimk"]
atlas = ExtResource("2_gwnis")
region = Rect2(448, 1344, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0h3t"]
atlas = ExtResource("2_gwnis")
region = Rect2(672, 1344, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_maysp"]
atlas = ExtResource("2_gwnis")
region = Rect2(1120, 672, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_1l10g"]
atlas = ExtResource("2_gwnis")
region = Rect2(1344, 672, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rl0i"]
atlas = ExtResource("2_gwnis")
region = Rect2(0, 896, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4o1l"]
atlas = ExtResource("2_gwnis")
region = Rect2(1120, 672, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2n6q"]
atlas = ExtResource("2_gwnis")
region = Rect2(896, 672, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6x0f"]
atlas = ExtResource("2_gwnis")
region = Rect2(672, 672, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_jp1hh"]
atlas = ExtResource("2_gwnis")
region = Rect2(448, 672, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_qs4pp"]
atlas = ExtResource("2_gwnis")
region = Rect2(224, 672, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyprq"]
atlas = ExtResource("2_gwnis")
region = Rect2(0, 672, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4lon"]
atlas = ExtResource("2_gwnis")
region = Rect2(1344, 448, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_d30e8"]
atlas = ExtResource("2_gwnis")
region = Rect2(0, 0, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pogt"]
atlas = ExtResource("2_gwnis")
region = Rect2(224, 0, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie76m"]
atlas = ExtResource("2_gwnis")
region = Rect2(448, 0, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_dy65m"]
atlas = ExtResource("2_gwnis")
region = Rect2(672, 0, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_pisgm"]
atlas = ExtResource("2_gwnis")
region = Rect2(0, 0, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkpta"]
atlas = ExtResource("2_gwnis")
region = Rect2(1344, 1120, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfmf2"]
atlas = ExtResource("2_gwnis")
region = Rect2(0, 1344, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm0op"]
atlas = ExtResource("2_gwnis")
region = Rect2(1120, 1120, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_6eb1q"]
atlas = ExtResource("2_gwnis")
region = Rect2(672, 448, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvbyc"]
atlas = ExtResource("2_gwnis")
region = Rect2(1344, 0, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvnt1"]
atlas = ExtResource("2_gwnis")
region = Rect2(0, 224, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kmt7"]
atlas = ExtResource("2_gwnis")
region = Rect2(224, 224, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4i3b"]
atlas = ExtResource("2_gwnis")
region = Rect2(448, 224, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvbbp"]
atlas = ExtResource("2_gwnis")
region = Rect2(672, 224, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_7v2uk"]
atlas = ExtResource("2_gwnis")
region = Rect2(896, 224, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6nl3"]
atlas = ExtResource("2_gwnis")
region = Rect2(1120, 224, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hx1r"]
atlas = ExtResource("2_gwnis")
region = Rect2(1344, 224, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_qas3k"]
atlas = ExtResource("2_gwnis")
region = Rect2(0, 448, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntwt4"]
atlas = ExtResource("2_gwnis")
region = Rect2(224, 448, 224, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdg72"]
atlas = ExtResource("2_gwnis")
region = Rect2(448, 448, 224, 224)

[sub_resource type="SpriteFrames" id="SpriteFrames_sh265"]
animations = [{
"frames": [{
"duration": 0.75,
"texture": SubResource("AtlasTexture_k53q1")
}, {
"duration": 0.75,
"texture": SubResource("AtlasTexture_fhl08")
}, {
"duration": 0.75,
"texture": SubResource("AtlasTexture_vtle1")
}, {
"duration": 0.75,
"texture": SubResource("AtlasTexture_od3ui")
}, {
"duration": 0.75,
"texture": SubResource("AtlasTexture_00tjw")
}, {
"duration": 0.75,
"texture": SubResource("AtlasTexture_x3vf3")
}, {
"duration": 0.75,
"texture": SubResource("AtlasTexture_apopc")
}, {
"duration": 0.75,
"texture": SubResource("AtlasTexture_5htga")
}, {
"duration": 0.75,
"texture": SubResource("AtlasTexture_p5o4e")
}],
"loop": false,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu6f8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n471f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7emwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hshwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpjlu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mwp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76lrf")
}],
"loop": true,
"name": &"backflip",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_btcbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwnis")
}],
"loop": false,
"name": &"crouch",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_efx54")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_755ss")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_bbimk")
}, {
"duration": 100.0,
"texture": SubResource("AtlasTexture_m0h3t")
}],
"loop": false,
"name": &"fall",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_maysp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1l10g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rl0i")
}],
"loop": false,
"name": &"flipland",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4o1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2n6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6x0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jp1hh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qs4pp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyprq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4lon")
}],
"loop": true,
"name": &"frontflip",
"speed": 12.0
}, {
"frames": [{
"duration": 4.0,
"texture": SubResource("AtlasTexture_d30e8")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_6pogt")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_ie76m")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_dy65m")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pisgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkpta")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_lfmf2")
}],
"loop": false,
"name": &"jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm0op")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rl0i")
}],
"loop": false,
"name": &"land",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6eb1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvbyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvnt1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kmt7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4i3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvbbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7v2uk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6nl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hx1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qas3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntwt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdg72")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gwnis"]
radius = 19.0
height = 122.0

[sub_resource type="AtlasTexture" id="AtlasTexture_b1ygp"]
atlas = ExtResource("3_btcbx")
region = Rect2(0, 0, 124, 132)

[sub_resource type="AtlasTexture" id="AtlasTexture_o28un"]
atlas = ExtResource("3_btcbx")
region = Rect2(124, 0, 124, 132)

[sub_resource type="AtlasTexture" id="AtlasTexture_qemgg"]
atlas = ExtResource("3_btcbx")
region = Rect2(0, 132, 124, 132)

[sub_resource type="AtlasTexture" id="AtlasTexture_8viyr"]
atlas = ExtResource("3_btcbx")
region = Rect2(124, 132, 124, 132)

[sub_resource type="SpriteFrames" id="SpriteFrames_sm0op"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1ygp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o28un")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qemgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8viyr")
}],
"loop": false,
"name": &"slash",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_btcbx"]
radius = 114.0
height = 456.0

[sub_resource type="Gradient" id="Gradient_vtle1"]
offsets = PackedFloat32Array(0, 0.33490565, 0.8018868, 1)
colors = PackedColorArray(0.8298393, 0.28756416, 0.31498945, 1, 0.82405865, 0.41192046, 0.21686882, 1, 0.9603854, 0.6462903, 0, 1, 0.95962197, 0.8111548, 3.85046e-07, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_1nvrg"]
gradient = SubResource("Gradient_vtle1")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_od3ui"]
particle_flag_disable_z = true
angle_min = -89.99999
angle_max = 90.000015
direction = Vector3(0, -25, 0)
spread = 10.0
initial_velocity_min = 350.0
initial_velocity_max = 350.0
angular_velocity_min = -20.000015
angular_velocity_max = 14.999984
gravity = Vector3(0, 250, 0)
radial_accel_min = -1.0000023
radial_accel_max = 0.99999774
color_initial_ramp = SubResource("GradientTexture1D_1nvrg")
turbulence_enabled = true
turbulence_noise_scale = 9.5
turbulence_noise_speed = Vector3(2, 1, 0)
turbulence_noise_speed_random = 0.05
turbulence_influence_min = 0.0
turbulence_influence_max = 0.2

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_00tjw"]
particle_flag_disable_z = true
angle_min = -89.99999
angle_max = 90.000015
direction = Vector3(0, -25, 0)
spread = 20.0
initial_velocity_min = 350.0
initial_velocity_max = 350.0
angular_velocity_min = -20.000015
angular_velocity_max = 14.999984
gravity = Vector3(0, 250, 0)
radial_accel_min = -1.0000023
radial_accel_max = 0.99999774
color_initial_ramp = SubResource("GradientTexture1D_1nvrg")
turbulence_enabled = true
turbulence_noise_scale = 4.0
turbulence_noise_speed = Vector3(2, 1, 0)
turbulence_noise_speed_random = 0.05
turbulence_influence_min = 0.0
turbulence_influence_max = 0.2

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_x3vf3"]
particle_flag_disable_z = true
angle_min = -89.99999
angle_max = 90.000015
direction = Vector3(0, -25, 0)
spread = 35.0
flatness = 0.5
initial_velocity_min = 300.0
initial_velocity_max = 300.0
angular_velocity_min = -20.000015
angular_velocity_max = 14.999984
gravity = Vector3(0, 250, 0)
radial_accel_min = -1.0000023
radial_accel_max = 0.99999774
color_initial_ramp = SubResource("GradientTexture1D_1nvrg")
turbulence_enabled = true
turbulence_noise_strength = 0.5
turbulence_noise_scale = 4.0
turbulence_noise_speed = Vector3(2, 1, 0)
turbulence_noise_speed_random = 0.05
turbulence_influence_min = 0.0
turbulence_influence_max = 0.2

[node name="Player" type="CharacterBody2D" groups=["Bouncy", "Player"]]
position = Vector2(-24, 5)
collision_layer = 10
collision_mask = 11
script = ExtResource("1_onrkg")
friction = 0.8
metadata/_edit_group_ = true

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_sh265")
animation = &"attack"
autoplay = "idle"
frame = 8
frame_progress = 1.0

[node name="PlayerHitbox" type="CollisionShape2D" parent="."]
position = Vector2(2, 51)
shape = SubResource("CapsuleShape2D_gwnis")

[node name="Slash" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(95, 46)
sprite_frames = SubResource("SpriteFrames_sm0op")
animation = &"slash"
frame = 3
frame_progress = 1.0

[node name="Attack" type="Area2D" parent="." groups=["Player"]]
position = Vector2(41, 26)
scale = Vector2(0.5, 0.5)

[node name="AttackHitbox" type="CollisionShape2D" parent="Attack"]
position = Vector2(-136, 36)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_btcbx")
disabled = true

[node name="Timers" type="Node2D" parent="."]

[node name="CoyoteJumpTimer" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true

[node name="AttackTimer" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[node name="MovementParticles" type="Node2D" parent="."]
show_behind_parent = true
script = ExtResource("4_k53q1")

[node name="LeafRun" type="GPUParticles2D" parent="MovementParticles"]
position = Vector2(-10, 112)
amount = 30
texture = ExtResource("5_fhl08")
lifetime = 6.0
explosiveness = 0.1
randomness = 0.3
fixed_fps = 24
process_material = SubResource("ParticleProcessMaterial_od3ui")

[node name="LeafJump" type="GPUParticles2D" parent="MovementParticles"]
position = Vector2(-11, 128)
emitting = false
amount = 20
texture = ExtResource("5_fhl08")
lifetime = 6.0
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
randomness = 0.3
fixed_fps = 24
process_material = SubResource("ParticleProcessMaterial_00tjw")

[node name="LeafLand" type="GPUParticles2D" parent="MovementParticles" groups=["AutumnLeafMaterial"]]
position = Vector2(-11, 128)
emitting = false
amount = 10
texture = ExtResource("5_fhl08")
lifetime = 5.0
one_shot = true
speed_scale = 1.8
explosiveness = 1.0
randomness = 0.3
fixed_fps = 24
process_material = SubResource("ParticleProcessMaterial_x3vf3")

[connection signal="jumped" from="." to="MovementParticles" method="_on_player_jumped"]
[connection signal="landed" from="." to="." method="_on_landed"]
[connection signal="landed" from="." to="MovementParticles" method="_on_player_landed"]
[connection signal="animation_finished" from="PlayerSprite" to="." method="_on_player_animation_finished"]
[connection signal="animation_finished" from="PlayerSprite" to="." method="_on_player_sprite_animation_finished"]
[connection signal="animation_finished" from="Slash" to="." method="_on_slash_animation_finished"]
[connection signal="timeout" from="Timers/CoyoteJumpTimer" to="." method="_on_coyote_jump_timer_timeout"]
[connection signal="timeout" from="Timers/AttackTimer" to="." method="_on_attack_timer_timeout"]
